Добавляет шрифты, оптимизированные картинки, некоторые блоки scss

--- a/source/index.html
+++ b/source/index.html
@@ -15,7 +15,10 @@
       <use href="/__spritemap#sprite-user"></use>
     </svg>
     <!-- примеры требуемых атрибутов data-test="*" -->
-    <div data-test="hero">hero</div>
+    <div class="test" data-test="hero">
+      hello
+
+    </div>
     <div data-test="about">about</div>
     <div data-test="price">price</div>
     <div data-test="games">games</div>
