Добавляет графику variables

--- a/source/index.html
+++ b/source/index.html
@@ -6,19 +6,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>SUPERGYM</title>
     <link rel="stylesheet" href="sass/style.scss">
+    <link rel="apple-touch-icon" sizes="180x180" href="./img/favicons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="./img/favicons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="./img/favicons/favicon-16x16.png">
+    <link rel="manifest" href="/source/public/site.webmanifest">
   </head>
 
   <body class="page-body">
-    <!-- пример использования спрайта -->
+    <!-- пример использования спрайта
     <img src="/__spritemap#sprite-logo-view" alt="Это спрайт">
     <svg>
       <use href="/__spritemap#sprite-user"></use>
     </svg>
-    <!-- примеры требуемых атрибутов data-test="*" -->
-    <div class="test" data-test="hero">
-      hello
+    примеры требуемых атрибутов data-test="*" -->
+    <section>
+      <div data-test="hero">
 
-    </div>
+      </div>
+    </section>
+
+
     <div data-test="about">about</div>
     <div data-test="price">price</div>
     <div data-test="games">games</div>
