--- a/source/index.html
+++ b/source/index.html
@@ -485,7 +485,7 @@
 
       </section>
 
-      <footer class="main-footer">
+      <footer class="main-footer" data-test="footer">
         <div class="main-footer__wrapper">
           <a class="main-footer__logo" href="index.html">
             <img class="main-footer__logo-img" src="./img/supergym-logo.svg" width="100" height="20" alt="Товарный знак компании Supergym">
@@ -522,21 +522,19 @@
           <div class="main-footer__socials socials">
             <ul class="socials__list list-reset">
               <li class="socials__item">
-                <a class="socials__link socials__icon socials__icon--vkontakte " href="https://vk.com/htmlacademy">
-
+                <a class="socials__link socials__icon socials__icon--vkontakte link-reset" href="https://vk.com/htmlacademy">
                   <span class="visually-hidden">Vk</span>
                 </a>
               </li>
               <li class="socials__item ">
-                <a class="socials__link socials__icon socials__icon--youtube " href="https://www.youtube.com/user/htmlacademyru">
-
-                  <span class="visually-hidden">YouTube</span>
+                <a class="socials__link socials__icon socials__icon--ok link-reset" href="#">
+                  <span class="visually-hidden">Одноклассники</span>
                 </a>
               </li>
 
               <li class="socials__item">
-                <a class="socials__link socials__icon socials__icon--telegram " href="https://t.me/htmlacademy">
-                  <span class="visually-hidden">Telegram</span>
+                <a class="socials__link socials__icon socials__icon--git link-reset" href="#">
+                  <span class="visually-hidden">Github</span>
                 </a>
               </li>
             </ul>
@@ -548,7 +546,6 @@
     <div data-test="faq">faq</div>
     <div data-test="reviews">reviews</div>
     <div data-test="form">form</div>
-    <div data-test="footer">footer</div>
     <script type="module" src="js/main.js"></script>
   </body>
 
