Исправляет отступы по pp на мобильной версии

--- a/source/index.html
+++ b/source/index.html
@@ -102,7 +102,8 @@
               <source width="678" height="345" type="image/jpg" srcset="./img/interior-tablet@1x.jpg 1x, ./img/interior-tablet@2x.jpg 2x">
               <img class="about__image" src="./img/interior-mobile@1x.jpg" srcset="./img/interior-mobile@2x.jpg 2x" alt="Помещение Supergym внутри" width="320" height="280">
             </picture>
-
+            <div class="about__video-image-container">
+              <button class="about__video-button button-reset"><span class="visually-hidden">Играть</span></button>
             <picture>
               <source width="360" height="230" type="image/webp" media="(min-width: 1366px)" srcset="./img/video-desktop@1x.webp 1x, ./img/video-desktop@2x.webp 2x">
               <source width="270" height="170" type="image/webp" media="(min-width: 768px)" srcset="./img/video-tablet@1x.webp 1x, ./img/video-tablet@2x.webp 2x">
@@ -111,6 +112,7 @@
               <source width="270" height="170" type="image/jpg" srcset="./img/video-tablet@1x.jpg 1x, ./img/video-tablet@2x.jpg 2x">
               <img class="about__video-image" src="./img/video-tablet@1x.jpg" srcset="./img/video-mobile@2x.jpg 2x" alt="Видео-экскурсия Supergym внутри" width="320" height="170">
             </picture>
+            </div>
           </div>
         </div>
       </section>
@@ -449,7 +451,7 @@
               <picture>
                 <source width="280" height="460" type="image/webp" media="(min-width: 1366px)" srcset="./img/special-offer-desktop@1x.webp 1x, ./img/special-offer-desktop@2x.webp 2x">
                 <source width="400" height="462" type="image/webp" media="(min-width: 768px)" srcset="./img/special-offer-tablet@1x.webp 1x, ./img/special-offer-tablet@2x.webp 2x">
-                <source width="320" height="320" type="image/webp" srcset="./img/special-offer-mobile@1x.webp 1x, ./img/special-offer-mobile@2x.webp 2x">
+                <source width="320" height="360" type="image/webp" srcset="./img/special-offer-mobile@1x.webp 1x, ./img/special-offer-mobile@2x.webp 2x">
                 <source width="320" height="360" type="image/jpg" media="(min-width: 1366px)" srcset="./img/special-offer-desktop@1x.jpg 1x, ./img/special-offer-desktop@2x.jpg 2x">
                 <source width="400" height="462" type="image/jpg" srcset="./img/special-offer-tablet@1x.jpg 1x, ./img/special-offer-tablet@2x.jpg 2x">
                 <img class="competitions__image" src="./img/special-offer-tablet@1x.jpg" srcset="./img/special-offer-mobile@2x.jpg 2x" alt="Соревнования по CrossFit" width="320" height="360">
